<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/title_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_notification"
            android:layout_toLeftOf="@id/switch_notification"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="0dp"
            android:text="@string/settings_notifications"
            android:textStyle="bold"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/desc_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_notification"
            android:layout_toLeftOf="@id/switch_notification"
            android:layout_below="@id/title_notification"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingTop="0dp"
            android:text="@string/notifications_desc"
            android:textSize="15sp" />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/title_data_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_data_refresh"
            android:layout_toLeftOf="@id/switch_data_refresh"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="0dp"
            android:text="@string/settings_data_refresh"
            android:textStyle="bold"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/desc_data_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_data_refresh"
            android:layout_toLeftOf="@id/switch_data_refresh"
            android:layout_below="@id/title_data_refresh"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingTop="0dp"
            android:text="@string/data_usage_desc"
            android:textSize="15sp" />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_data_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/title_load_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_load_image"
            android:layout_toLeftOf="@id/switch_load_image"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="0dp"
            android:text="@string/settings_load_image"
            android:textStyle="bold"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/desc_load_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_load_image"
            android:layout_toLeftOf="@id/switch_load_image"
            android:layout_below="@id/title_load_image"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingTop="0dp"
            android:text="@string/data_usage_desc"
            android:textSize="15sp" />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_load_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

</LinearLayout>